# coding-agent-kit

./: .dockerignore  .env.template  .env.template.zh  .gitignore  AGENTS.md  AGENTS.zh.md  LICENSE  README.md  README.zh.md  install.sh  pyproject.toml
.codex/skills/: agent-history-version-research
docs/: aider.md  aider.zh.md  auggie.md  auggie.zh.md  claude.md  claude.zh.md  codebuddy.md  codebuddy.zh.md  codex.md  codex.zh.md  continue.md  continue.zh.md  copilot.md  copilot.zh.md  crush.md  crush.zh.md  cursor.md  cursor.zh.md  deepagents.md  deepagents.zh.md  exit_codes.md  exit_codes.zh.md  factory.md  factory.zh.md  gemini.md  gemini.zh.md  goose.md  goose.zh.md  kilocode.md  kilocode.zh.md  kimi.md  kimi.zh.md  model_override.md  model_override.zh.md  openclaw.md  openclaw.zh.md  opencode.md  opencode.zh.md  openhands.md  openhands.zh.md  (+16 more)
scripts/: availability_test.py  test_agents.sh
src/: __init__.py  cli.py  io_helpers.py  models.py  stats_extract.py  utils.py
src/agent_runtime/: __init__.py  command_exec.py  env.py  install_version.py  media.py  parsing.py  trajectory.py
src/agents/: __init__.py  aider.py  auggie.py  base.py  claude.py  codebuddy.py  codex.py  continue.py  copilot.py  crush.py  cursor.py  deepagents.py  factory.py  gemini.py  goose.py  kimi.py  (+9 more)
tests/: availability_test.py  install_script_docker.Dockerfile  install_script_docker_runner.sh  install_script_version_snapshots.tsv  test_api_run.py  test_configure_post_command.py  test_image_input.py  test_install_script_docker.py  test_install_validation.py  test_run.py  test_swe_agent.py
(+9 files in other folders)
